--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,46 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
         android:id="@+id/like_fragment"
-        android:visibility="visible"
-        android:layout_above="@+id/navigation">
-
-    </FrameLayout>
-
-    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/bog_like_fragnebt"
-        android:visibility="gone"
-        android:layout_above="@+id/navigation">
-
-    </FrameLayout>
+        android:layout_above="@+id/navigation" />
 
     <FrameLayout
+        android:id="@+id/bog_like_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@+id/navigation"
+        android:visibility="gone" />
+
+    <FrameLayout
         android:id="@+id/upload_fragment"
-        android:visibility="gone"
-        android:layout_above="@+id/navigation">
-
-    </FrameLayout>
-
-    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/favorites_fragment"
-        android:visibility="gone"
-        android:layout_above="@+id/navigation">
+        android:layout_above="@+id/navigation"
+        android:visibility="gone" />
 
-    </FrameLayout>
+    <FrameLayout
+        android:id="@+id/favorites_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/navigation"
+        android:visibility="gone" />
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigation"
@@ -48,8 +39,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        app:itemTextColor="@color/colorPrimary"
         app:itemIconTint="@color/colorPrimary"
+        app:itemTextColor="@color/colorPrimary"
         app:menu="@menu/navigation" />
 
 </RelativeLayout>
